# petra_catalogs

./: LICENSE  pyproject.toml
.github/workflows/: documentation.yml  github-actions.yml
docs/: conf.py  index.rst  modules.rst
example_notebooks/: lisa_example.feather  lisa_example.ipynb  toy_problem.ipynb
petra/: __init__.py  aux_distributions.py  cost_matrix.py  initialization.py  make_catalog.py  parametric_fits.py  posterior_chain.py  relabel.py  samples_io.py
tests/: test_cost_matrices.py  test_initialization.py  test_parametric_fits.py  test_relabel.py  test_utils.py
