[tool.poetry]
name = "petra"
version = "0.1.0"
description = ""
authors = ["Aaron <Aaron9034@Hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.3"
scipy = "^1.15.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
